added Docker-compose installation

--- a/deploy-docker.yaml
+++ b/deploy-docker.yaml
@@ -8,3 +8,20 @@
         name: docker
         update_cache: yes
         state: present
+
+- name: Install Docker-compose
+  hosts: all
+  tasks:
+    - name: Create docker-compose directory
+      file:
+        path: ~/.docker/cli-plugins
+        state: directory
+    - name: Get architecture of remote machine
+      shell: uname -m
+      register: remote_arch
+    - name: Install docker-compose
+      get_url:
+        url: "https://github.com/docker/compose/releases/latest/download/docker-compose-linux-{{remote_arch.stdout}}"
+        dest: ~/.docker/cli-plugins/docker-compose
+        mode: +x
+
