added more info

--- a/deploy-docker.yaml
+++ b/deploy-docker.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Install Docker
-  hosts: all
+  hosts: docker_server
   become: yes
   tasks:
     - name: Install Docker
@@ -8,9 +8,13 @@
         name: docker
         update_cache: yes
         state: present
+    - name: Start docker daemon
+      systemd:
+        name: docker
+        state: started
 
 - name: Install Docker-compose
-  hosts: all
+  hosts: docker_server
   tasks:
     - name: Create docker-compose directory
       file:
@@ -24,4 +28,26 @@
         url: "https://github.com/docker/compose/releases/latest/download/docker-compose-linux-{{remote_arch.stdout}}"
         dest: ~/.docker/cli-plugins/docker-compose
         mode: +x
+
+
+- name: Add ec2-user to docker group
+  hosts: all
+  become: yes
+  tasks: 
+    - name: Add ec2-user to docker group
+      user: 
+        name: ec2-user
+        groups: docker
+        append: yes
+    - name: Reconnect to server session
+      meta: reset_connection
+- name:
+  hosts: docker_server
+  tasks:
+    - name: pull redis
+      docker_image: 
+          name: redis
+          source: pull
+
+    
 
