--- a/deploy-docker-ec2-user.yaml
+++ b/deploy-docker-ec2-user.yaml
@@ -1,4 +1,21 @@
 ---
+
+---
+- name: Wait for SSH connection
+  hosts: all
+  gather_facts: False
+  tasks:
+    - name: Ensure SSH port open
+      wait_for:
+        port: 22
+        delay: 10
+        timeout: 100
+        search_regex: OpenSSH
+        host: '{{ (ansible_ssh_host|default(ansible_host))|default(inventory_hostname) }}'
+      vars:
+        ansible_connection: local
+        ansible_python_interpreter: /usr/bin/python3
+
 - name: Install Docker
   hosts: docker_server
   become: yes
