--- a/deploy-docker-ec2-user.yaml
+++ b/deploy-docker-ec2-user.yaml
@@ -16,7 +16,7 @@
         ansible_python_interpreter: /usr/bin/python3
 
 - name: Install Docker
-  hosts: docker_server
+  hosts: all
   become: yes
   tasks:
     - name: Install Docker
@@ -30,7 +30,7 @@
         state: started
 
 - name: Install Docker-compose
-  hosts: docker_server
+  hosts: all
   tasks:
     - name: Create docker-compose directory
       file:
@@ -47,7 +47,7 @@
 
 
 - name: Add ec2-user to docker group
-  hosts: docker_server
+  hosts: all
   become: yes
   tasks: 
     - name: Add ec2-user to docker group
@@ -59,7 +59,7 @@
       meta: reset_connection
 
 - name: Start docker containers
-  hosts: docker_server
+  hosts: all
   vars_files:
         - project-vars 
   tasks:
